--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
         <div class="ugly-photo-container">
             <p class="caption">通常這樣特質的人，會長這個樣子 👇</p>
-            <img id="ugly-img" src="https://via.placeholder.com/400x400?text=請把這裡換成醜照.jpg" alt="專屬特質照">
+            <img id="ugly-img" src="funny-pic.jpg" alt="專屬特質照">
         </div>
 
         <button id="more-btn" onclick="triggerSurprise()">點擊看更多...</button>
